Add complete backend server

--- a/SaaS/server/.env
+++ b/SaaS/server/.env
@@ -1,1 +1,7 @@
 PORT = 3000
+FRONTEND_URL=http://localhost:5173
+
+MONGODB_URI = mongodb://127.0.0.1:27017/AIResumeBuilder
+
+JWT_SECRET = secret123code
+NODE_ENV = development
