--- a/SaaS/server/.env
+++ b/SaaS/server/.env
@@ -5,3 +5,5 @@ MONGODB_URI = mongodb://127.0.0.1:27017/AIResumeBuilder
 
 JWT_SECRET = secret123code
 NODE_ENV = development
+
+IMAGEKIT_PRIVATE_KEY = private_ifFapMuR1ET93CsdorkuFULkEts=
